<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/TVWordName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/wordName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TVuserWordRatingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/wordRating"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVWordName" />

    <TextView
        android:id="@+id/TVuserWordRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVuserWordRatingLabel"
        app:layout_constraintBaseline_toBaselineOf="@id/TVuserWordRatingLabel"
        tools:layout_editor_absoluteY="109dp"
        tools:text="0.0" />

    <SeekBar
        android:id="@+id/SBuserWordRating"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVuserWordRatingLabel" />

    <TextView
        android:id="@+id/TVnotesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/notes"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SBuserWordRating" />

    <EditText
        android:id="@+id/ETnotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:hint="@string/insertNotes"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVnotesLabel" />

    <Button
        android:id="@+id/btn_Cancel_edit"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ETnotes" />

    <Button
        android:id="@+id/btn_OK_edit"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_Cancel_edit"
        app:layout_constraintTop_toBottomOf="@id/ETnotes" />


</androidx.constraintlayout.widget.ConstraintLayout>